--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 		<link rel="apple-touch-icon" href="/images/CHORES.png">
 		<meta name="apple-mobile-web-app-capable" content="yes">
-		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 		<!--[if IE]>
 			<link rel="shortcut icon" href="favicon.ico">
